# AI_SustainabilityAudit

./: .env  .env.example  .gitignore  README.md  README_SCRIPTS.md  Start-AISustainabilityAudit.ps1  cleanup.sh  docker-compose-sdmarag.yaml  pyproject.toml  quick_start.sh  quick_verify.sh  start.sh  stop.sh  test.py  verify.sh
MongoTest/: database.py  main.py
MongoTest/core/: schemas.py  utils.py
MongoTest/router/: __init__.py  login.py
client/: Sample 2024 Cornel carbon data.md  package-lock.json  package.json
client/src/: App.jsx
client/src/HistoryReport/: HistoryReport.jsx
client/src/Home/: Home.css  Home.jsx  MidPanel.css  MidPanel.jsx  RightPanel.jsx
client/src/Login/: Login.css  Login.jsx  Register.css  Register.jsx
client/src/NavBar/: NavBar.css  NavBar.jsx
client/src/Pages/: SectorMidPanel.jsx  SectorRanking.css  SectorRanking.jsx  SectorRightPanel.jsx
client/src/Test/: TestPage.css  TestPage.jsx
client/src/context/: WebSocketContext.jsx
my-react-app/: package-lock.json  package.json
my-react-app/src/: App.jsx
my-react-app/src/Home/: Home.css  Home.jsx  MidPanel.css  MidPanel.jsx  RightPanel.css  RightPanel.jsx
my-react-app/src/Login/: Login.jsx  Register.jsx
my-react-app/src/NavBar/: NavBar.css  NavBar.jsx
my-react-app/src/Test/: TestPage.css  TestPage.jsx
server/: Dockerfile
server/src/: extension.py  main.py
server/src/agents/: __init__.py  agents_base.py  prompts.py  tools.py
server/src/api/: carbon_reporting.py  downloads.py  edits.py  embeddings.py  login.py
server/src/core/: config.py  dependencies.py  schemas.py  (+2 more)
(+19 files in other folders)
